fixed bugs with compare courses, improved readability, began improving on degree programs context

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,6 @@
   --font-size-sm: 14px;
   --font-size-md: 16px;
   --font-size-lg: 18px;
-  --font-size-2lg: 22px;
   --font-size-xl: 24px;
   --font-size-2xl: 32px;
   --font-size-4xl: 40px;
@@ -247,7 +246,7 @@ body {
   }
 
   .heading-sm {
-    font-size: var(--font-size-2lg);
+    font-size: var(--font-size-lg);
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-snug);
   }
